added test for dynamic links

--- a/resources/music_library_database_app/views/albums.erb
+++ b/resources/music_library_database_app/views/albums.erb
@@ -5,8 +5,9 @@
 
     <% @albums.each do |album| %>
         <div>
-        Title: <%= album.title %>
+        Title: <a href='albums/<%= album.id %>'><%= album.title %></a>
         Released: <%= album.release_year %>
+        # <a href='albums/<%= album.id %>'></a>
         </div>
     <% end %>
 
